--- a/update_schedules.ipynb
+++ b/update_schedules.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -19,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -62,18 +71,108 @@
      "output_type": "stream",
      "text": [
       "Getting studyplans from DB...\n",
-      "- 172 studyplans found\n",
+      "- 175 studyplans found\n",
       "Getting studyplans from DB...\n",
       "- 23 studyplans found\n",
       "Getting courses from DB...\n",
-      "- 1250 courses found\n"
+      "- 1259 courses found\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1250/1250 [02:28<00:00,  8.40it/s]\n"
+      "Processing courses schedules:  56%|█████▌    | 707/1259 [00:12<00:05, 98.62it/s] "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://edu.epfl.ch/studyplan/fr/bachelor/mathematiques/coursebook/topological-groups-MATH-315\n",
+      "No schedule found for https://edu.epfl.ch/studyplan/fr/bachelor/mathematiques/coursebook/topological-groups-MATH-315\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Processing courses schedules:  71%|███████   | 889/1259 [00:14<00:03, 96.28it/s] "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://edu.epfl.ch/studyplan/fr/ecole_doctorale/photonique/coursebook/photonic-crystals-PHYS-605\n",
+      "No schedule found for https://edu.epfl.ch/studyplan/fr/ecole_doctorale/photonique/coursebook/photonic-crystals-PHYS-605\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Processing courses schedules:  89%|████████▉ | 1118/1259 [00:17<00:02, 59.02it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://edu.epfl.ch/studyplan/fr/ecole_doctorale/cours-blocs/coursebook/insights-on-magnetic-and-semiconducting-nanostructures-PHYS-646\n",
+      "No schedule found for https://edu.epfl.ch/studyplan/fr/ecole_doctorale/cours-blocs/coursebook/insights-on-magnetic-and-semiconducting-nanostructures-PHYS-646\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Processing courses schedules:  93%|█████████▎| 1175/1259 [00:18<00:01, 63.10it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://edu.epfl.ch/studyplan/fr/ecole_doctorale/transversal-skills-courses/coursebook/teaching-stem-a-problem-solving-approach-spring-ENG-644-B\n",
+      "No schedule found for https://edu.epfl.ch/studyplan/fr/ecole_doctorale/transversal-skills-courses/coursebook/teaching-stem-a-problem-solving-approach-spring-ENG-644-B\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Processing courses schedules:  97%|█████████▋| 1220/1259 [00:19<00:00, 64.61it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://edu.epfl.ch/studyplan/fr/ecole_doctorale/biotechnologie-et-genie-biologique/coursebook/cibm-translational-mr-neuroimaging-spectroscopy-PHYS-760\n",
+      "No schedule found for https://edu.epfl.ch/studyplan/fr/ecole_doctorale/biotechnologie-et-genie-biologique/coursebook/cibm-translational-mr-neuroimaging-spectroscopy-PHYS-760\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Processing courses schedules:  99%|█████████▉| 1246/1259 [00:20<00:00, 61.22it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://edu.epfl.ch/studyplan/fr/ecole_doctorale/transversal-skills-courses/coursebook/teaching-stem-a-problem-solving-approach-fall-ENG-644-A\n",
+      "No schedule found for https://edu.epfl.ch/studyplan/fr/ecole_doctorale/transversal-skills-courses/coursebook/teaching-stem-a-problem-solving-approach-fall-ENG-644-A\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Processing courses schedules: 100%|██████████| 1259/1259 [00:20<00:00, 62.19it/s]\n"
      ]
     }
    ],
@@ -83,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +196,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 11/11 [00:46<00:00,  4.19s/it]\n"
+      "100%|██████████| 11/11 [00:11<00:00,  1.08s/it]\n"
      ]
     },
     {
@@ -111,16 +210,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 15541/15541 [01:34<00:00, 165.10it/s]\n"
+      "100%|██████████| 10/10 [00:55<00:00,  5.59s/it]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found 15541 rooms on plan.epfl.ch\n",
+      "Found 15564 rooms on plan.epfl.ch\n",
       "Getting rooms from database\n",
-      "Found 170 rooms in database\n",
+      "Found 179 rooms in database\n",
       "Updating rooms in database\n"
      ]
     },
@@ -128,7 +227,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 170/170 [00:15<00:00, 10.80it/s]\n"
+      "100%|██████████| 179/179 [00:04<00:00, 40.46it/s]\n"
      ]
     },
     {
@@ -142,14 +241,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "0it [00:00, ?it/s]"
+      "100%|██████████| 2/2 [00:00<00:00, 354.92it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "No new rooms to create\n"
+      "Inserting 2 new rooms in database\n"
      ]
     },
     {
@@ -166,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -174,15 +273,15 @@
      "output_type": "stream",
      "text": [
       "Getting schedules from DB...\n",
-      "- 0 schedules found\n",
-      "Filtering 19973 schedules...\n"
+      "- 19960 schedules found\n",
+      "Filtering 19960 schedules...\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 19973/19973 [00:00<00:00, 1263141.90it/s]"
+      "100%|██████████| 19960/19960 [00:01<00:00, 11605.43it/s]\n"
      ]
     },
     {
@@ -191,21 +290,7 @@
      "text": [
       "Deleting schedules not in incoming schedules...\n",
       "- 0 schedules deleted\n",
-      "Creating 19973 new schedules...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "- 19973 schedules created\n"
+      "No new schedules to create\n"
      ]
     }
    ],
@@ -215,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +308,7 @@
      "output_type": "stream",
      "text": [
       "Getting DB bookings...\n",
-      "- 0 bookings found in DB\n",
+      "- 24694 bookings found in DB\n",
       "Filtering bookings....\n"
      ]
     },
@@ -231,7 +316,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 19973/19973 [00:25<00:00, 794.38it/s] \n"
+      "100%|██████████| 19960/19960 [01:08<00:00, 291.80it/s]\n"
      ]
     },
     {
@@ -245,7 +330,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "0it [00:00, ?it/s]\n"
+      "100%|██████████| 24694/24694 [00:20<00:00, 1221.27it/s]"
      ]
     },
     {
@@ -253,8 +338,14 @@
      "output_type": "stream",
      "text": [
       "- No bookings to remove\n",
-      "Creating 22258 new bookings...\n",
-      "- 22258 bookings created\n"
+      "No bookings to create\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
