handle schedule that only changed bookings

--- a/update_schedules.ipynb
+++ b/update_schedules.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -28,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +73,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processing courses schedules:  56%|█████▌    | 707/1259 [00:12<00:05, 98.62it/s] "
+      "Processing courses schedules:  56%|█████▋    | 710/1259 [00:07<00:04, 115.51it/s]"
      ]
     },
     {
@@ -97,7 +88,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processing courses schedules:  71%|███████   | 889/1259 [00:14<00:03, 96.28it/s] "
+      "Processing courses schedules:  71%|███████   | 889/1259 [00:09<00:03, 105.30it/s]"
      ]
     },
     {
@@ -112,7 +103,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processing courses schedules:  89%|████████▉ | 1118/1259 [00:17<00:02, 59.02it/s]"
+      "Processing courses schedules:  89%|████████▉ | 1120/1259 [00:13<00:02, 60.57it/s]"
      ]
     },
     {
@@ -127,7 +118,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processing courses schedules:  93%|█████████▎| 1175/1259 [00:18<00:01, 63.10it/s]"
+      "Processing courses schedules:  93%|█████████▎| 1168/1259 [00:14<00:01, 61.38it/s]"
      ]
     },
     {
@@ -142,7 +133,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processing courses schedules:  97%|█████████▋| 1220/1259 [00:19<00:00, 64.61it/s]"
+      "Processing courses schedules:  97%|█████████▋| 1215/1259 [00:15<00:00, 60.42it/s]"
      ]
     },
     {
@@ -157,7 +148,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processing courses schedules:  99%|█████████▉| 1246/1259 [00:20<00:00, 61.22it/s]"
+      "Processing courses schedules:  99%|█████████▉| 1250/1259 [00:15<00:00, 62.50it/s]"
      ]
     },
     {
@@ -172,7 +163,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processing courses schedules: 100%|██████████| 1259/1259 [00:20<00:00, 62.19it/s]\n"
+      "Processing courses schedules: 100%|██████████| 1259/1259 [00:15<00:00, 79.77it/s]\n"
      ]
     }
    ],
@@ -300,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -316,13 +307,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 19960/19960 [01:08<00:00, 291.80it/s]\n"
+      "100%|██████████| 19960/19960 [02:25<00:00, 137.30it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      " - 1369 schedules changed rooms bookings (to remove)\n",
       "Removing bookings without schedule...\n"
      ]
     },
@@ -330,22 +322,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 24694/24694 [00:20<00:00, 1221.27it/s]"
+      "100%|██████████| 24694/24694 [00:20<00:00, 1202.50it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "- No bookings to remove\n",
+      "- 1369 bookings removed\n",
       "No bookings to create\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
      ]
     }
    ],
