--- a/update_schedules.ipynb
+++ b/update_schedules.ipynb
@@ -73,7 +73,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processing courses schedules:  56%|█████▋    | 710/1259 [00:07<00:04, 115.51it/s]"
+      "Processing courses schedules:  55%|█████▌    | 696/1259 [00:24<00:15, 36.49it/s]"
      ]
     },
     {
@@ -88,7 +88,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processing courses schedules:  71%|███████   | 889/1259 [00:09<00:03, 105.30it/s]"
+      "Processing courses schedules:  70%|███████   | 886/1259 [00:30<00:15, 24.23it/s]"
      ]
     },
     {
@@ -103,7 +103,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processing courses schedules:  89%|████████▉ | 1120/1259 [00:13<00:02, 60.57it/s]"
+      "Processing courses schedules:  88%|████████▊ | 1111/1259 [00:47<00:08, 16.77it/s]"
      ]
     },
     {
@@ -118,7 +118,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processing courses schedules:  93%|█████████▎| 1168/1259 [00:14<00:01, 61.38it/s]"
+      "Processing courses schedules:  93%|█████████▎| 1166/1259 [00:51<00:05, 17.30it/s]"
      ]
     },
     {
@@ -133,7 +133,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processing courses schedules:  97%|█████████▋| 1215/1259 [00:15<00:00, 60.42it/s]"
+      "Processing courses schedules:  97%|█████████▋| 1215/1259 [00:53<00:02, 15.64it/s]"
      ]
     },
     {
@@ -148,7 +148,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processing courses schedules:  99%|█████████▉| 1250/1259 [00:15<00:00, 62.50it/s]"
+      "Processing courses schedules:  99%|█████████▊| 1241/1259 [00:56<00:01, 10.96it/s]"
      ]
     },
     {
@@ -163,7 +163,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processing courses schedules: 100%|██████████| 1259/1259 [00:15<00:00, 79.77it/s]\n"
+      "Processing courses schedules: 100%|██████████| 1259/1259 [00:58<00:00, 21.53it/s]\n"
      ]
     }
    ],
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -264,15 +264,15 @@
      "output_type": "stream",
      "text": [
       "Getting schedules from DB...\n",
-      "- 19960 schedules found\n",
-      "Filtering 19960 schedules...\n"
+      "- 19971 schedules found\n",
+      "Filtering 19971 schedules...\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 19960/19960 [00:01<00:00, 11605.43it/s]\n"
+      "100%|██████████| 19971/19971 [00:02<00:00, 7784.03it/s] "
      ]
     },
     {
@@ -283,6 +283,13 @@
       "- 0 schedules deleted\n",
       "No new schedules to create\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
     }
    ],
    "source": [
@@ -291,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -299,7 +306,7 @@
      "output_type": "stream",
      "text": [
       "Getting DB bookings...\n",
-      "- 24694 bookings found in DB\n",
+      "- 23302 bookings found in DB\n",
       "Filtering bookings....\n"
      ]
     },
@@ -307,14 +314,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 19960/19960 [02:25<00:00, 137.30it/s]\n"
+      "100%|██████████| 19971/19971 [03:07<00:00, 106.45it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " - 1369 schedules changed rooms bookings (to remove)\n",
+      " - 0 bookings changed (not the schedule) (to remove)\n",
       "Removing bookings without schedule...\n"
      ]
     },
@@ -322,15 +329,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 24694/24694 [00:20<00:00, 1202.50it/s]\n"
+      "100%|██████████| 23302/23302 [00:31<00:00, 742.06it/s] \n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "- 1369 bookings removed\n",
-      "No bookings to create\n"
+      "- No bookings to remove\n",
+      "Creating 86 new bookings...\n",
+      "batch op errors occurred, full error: {'writeErrors': [{'index': 0, 'code': 11000, 'errmsg': \"E11000 duplicate key error collection: occupancy-epfl-prod.course_bookings index: booking_unique dup key: { schedule_id: ObjectId('6599fd29fe5ab815f0ea74e4'), room_id: ObjectId('6599ebc8c5184ecdcff076b5') }\", 'keyPattern': {'schedule_id': 1, 'room_id': 1}, 'keyValue': {'schedule_id': ObjectId('6599fd29fe5ab815f0ea74e4'), 'room_id': ObjectId('6599ebc8c5184ecdcff076b5')}, 'op': {'schedule_id': ObjectId('6599fd29fe5ab815f0ea74e4'), 'room_id': ObjectId('6599ebc8c5184ecdcff076b5'), 'available': True, '_id': ObjectId('65dcf3bcb75136a03d474c25')}}], 'writeConcernErrors': [], 'nInserted': 0, 'nUpserted': 0, 'nMatched': 0, 'nModified': 0, 'nRemoved': 0, 'upserted': []}\n"
      ]
     }
    ],
@@ -355,7 +363,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
