--- a/update_courses.ipynb
+++ b/update_courses.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -28,23 +19,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Initializing DB:   0%|          | 0/11 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Created collection planned_in\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -77,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -91,36 +68,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 5/5 [00:10<00:00,  2.13s/it]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "- 1930 courses urls found\n",
-      "Parsing courses...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 1930/1930 [02:35<00:00, 12.39it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "- 1930 courses parsed\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
+      "  0%|          | 0/5 [00:00<?, ?it/s]"
      ]
     }
    ],
@@ -131,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,12 +92,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "course = utils.parse_course(\"https://edu.epfl.ch/studyplan/fr/master/data-science/coursebook/foundations-of-data-science-COM-406\")"
+    "#course = utils.parse_course(\"https://edu.epfl.ch/studyplan/fr/master/data-science/coursebook/foundations-of-data-science-COM-406\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -263,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -276,40 +224,84 @@
     }
    ],
    "source": [
-    "# Spring 2023-2024\n",
+    "# # Spring 2023-2024\n",
+    "# skip_dates = [\n",
+    "#     datetime(2024, 3, 29),\n",
+    "#     datetime(2024, 4, 1),\n",
+    "#     datetime(2024, 4, 2),\n",
+    "#     datetime(2024, 4, 3),\n",
+    "#     datetime(2024, 4, 4),\n",
+    "#     datetime(2024, 4, 5),\n",
+    "#     datetime(2024, 5, 9),\n",
+    "#     datetime(2024, 5, 20),\n",
+    "# ]\n",
+    "\n",
+    "# utils.create_new_semester(db,\n",
+    "#     name=\"Semestre d'automne 2023-2024\",\n",
+    "#     start_date=datetime(2023, 9, 18),\n",
+    "#     end_date=datetime(2023, 12, 22),\n",
+    "#     skip_dates=[datetime(2023, 9, 18)],\n",
+    "#     type=\"fall\",\n",
+    "#     available=True\n",
+    "# )\n",
+    "\n",
+    "# utils.create_new_semester(db,\n",
+    "#     name=\"Semestre de printemps 2023-2024\",\n",
+    "#     start_date=datetime(2024, 2, 19),\n",
+    "#     end_date=datetime(2024, 5, 31),\n",
+    "#     skip_dates=skip_dates,\n",
+    "#     type=\"spring\",\n",
+    "#     available=True\n",
+    "# )\n",
+    "\n",
+    "# utils.create_new_semester(db,\n",
+    "#     name=\"2023-2024\",\n",
+    "#     start_date=datetime(2024, 9, 1),\n",
+    "#     end_date=datetime(2024, 8, 30),\n",
+    "#     skip_dates=skip_dates,\n",
+    "#     type=\"year\",\n",
+    "#     available=True\n",
+    "# )\n",
+    "\n",
+    "# Fall 2024-2025\n",
     "skip_dates = [\n",
-    "    datetime(2024, 3, 29),\n",
-    "    datetime(2024, 4, 1),\n",
-    "    datetime(2024, 4, 2),\n",
-    "    datetime(2024, 4, 3),\n",
-    "    datetime(2024, 4, 4),\n",
-    "    datetime(2024, 4, 5),\n",
-    "    datetime(2024, 5, 9),\n",
-    "    datetime(2024, 5, 20),\n",
+    "    datetime(2024, 9, 16),\n",
+    "    datetime(2024, 10, 21),\n",
+    "    datetime(2024, 10, 22),\n",
+    "    datetime(2024, 10, 23),\n",
+    "    datetime(2024, 10, 24),\n",
+    "    datetime(2024, 10, 25),\n",
+    "    datetime(2025, 4, 18),\n",
+    "    datetime(2025, 4, 21),\n",
+    "    datetime(2025, 4, 22),\n",
+    "    datetime(2025, 4, 23),\n",
+    "    datetime(2025, 4, 24),\n",
+    "    datetime(2025, 4, 25),\n",
+    "    datetime(2025, 5, 29),\n",
     "]\n",
     "\n",
     "utils.create_new_semester(db,\n",
-    "    name=\"Semestre d'automne 2023-2024\",\n",
-    "    start_date=datetime(2023, 9, 18),\n",
-    "    end_date=datetime(2023, 12, 22),\n",
-    "    skip_dates=[datetime(2023, 9, 18)],\n",
+    "    name=\"Semestre d'automne 2024-2025\",\n",
+    "    start_date=datetime(2024, 9, 16),\n",
+    "    end_date=datetime(2024, 12, 22),\n",
+    "    skip_dates=skip_dates,\n",
     "    type=\"fall\",\n",
     "    available=True\n",
     ")\n",
     "\n",
-    "utils.create_new_semester(db,\n",
-    "    name=\"Semestre de printemps 2023-2024\",\n",
-    "    start_date=datetime(2024, 2, 19),\n",
-    "    end_date=datetime(2024, 5, 31),\n",
-    "    skip_dates=skip_dates,\n",
-    "    type=\"spring\",\n",
-    "    available=True\n",
-    ")\n",
+    "# utils.create_new_semester(db,\n",
+    "#     name=\"Semestre de printemps 2024-2025\",\n",
+    "#     start_date=datetime(2025, 2, 17),\n",
+    "#     end_date=datetime(2025, 6, 1),\n",
+    "#     skip_dates=skip_dates,\n",
+    "#     type=\"spring\",\n",
+    "#     available=True\n",
+    "# )\n",
     "\n",
     "utils.create_new_semester(db,\n",
-    "    name=\"2023-2024\",\n",
-    "    start_date=datetime(2024, 9, 1),\n",
-    "    end_date=datetime(2024, 8, 30),\n",
+    "    name=\"2024-2025\",\n",
+    "    start_date=datetime(2024, 9, 9),\n",
+    "    end_date=datetime(2025, 6, 1),\n",
     "    skip_dates=skip_dates,\n",
     "    type=\"year\",\n",
     "    available=True\n",
@@ -318,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -352,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -373,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -406,6 +398,13 @@
    "source": [
     "utils.create_planned_in(db, unique_courses)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -424,7 +423,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
