--- a/update_schedules.ipynb
+++ b/update_schedules.ipynb
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -314,7 +314,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 19971/19971 [03:07<00:00, 106.45it/s]\n"
+      "100%|██████████| 19971/19971 [02:57<00:00, 112.29it/s]\n"
      ]
     },
     {
@@ -329,7 +329,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 23302/23302 [00:31<00:00, 742.06it/s] \n"
+      "100%|██████████| 23302/23302 [00:31<00:00, 738.88it/s] \n"
      ]
     },
     {
@@ -337,8 +337,23 @@
      "output_type": "stream",
      "text": [
       "- No bookings to remove\n",
-      "Creating 86 new bookings...\n",
-      "batch op errors occurred, full error: {'writeErrors': [{'index': 0, 'code': 11000, 'errmsg': \"E11000 duplicate key error collection: occupancy-epfl-prod.course_bookings index: booking_unique dup key: { schedule_id: ObjectId('6599fd29fe5ab815f0ea74e4'), room_id: ObjectId('6599ebc8c5184ecdcff076b5') }\", 'keyPattern': {'schedule_id': 1, 'room_id': 1}, 'keyValue': {'schedule_id': ObjectId('6599fd29fe5ab815f0ea74e4'), 'room_id': ObjectId('6599ebc8c5184ecdcff076b5')}, 'op': {'schedule_id': ObjectId('6599fd29fe5ab815f0ea74e4'), 'room_id': ObjectId('6599ebc8c5184ecdcff076b5'), 'available': True, '_id': ObjectId('65dcf3bcb75136a03d474c25')}}], 'writeConcernErrors': [], 'nInserted': 0, 'nUpserted': 0, 'nMatched': 0, 'nModified': 0, 'nRemoved': 0, 'upserted': []}\n"
+      "Checking if new bookings are in unavailable bookings...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 86/86 [00:00<00:00, 3813.29it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "- 52 bookings (re)made available\n",
+      "Creating 34 new bookings...\n",
+      "- 34 bookings created\n"
      ]
     }
    ],
