--- a/update_courses.ipynb
+++ b/update_courses.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -19,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +77,36 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/5 [00:00<?, ?it/s]"
+      "100%|██████████| 5/5 [01:07<00:00, 13.51s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "- 1858 courses urls found\n",
+      "Parsing courses...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1858/1858 [16:03<00:00,  1.93it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "- 1858 courses parsed\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
@@ -79,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +143,7 @@
      "output_type": "stream",
      "text": [
       "Getting courses from DB...\n",
-      "- 1926 courses found in DB\n",
+      "- 2087 courses found in DB\n",
       "Filtering courses...\n"
      ]
     },
@@ -113,7 +151,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1926/1926 [00:00<00:00, 110735.01it/s]"
+      "100%|██████████| 1853/1853 [00:00<00:00, 48180.21it/s]"
      ]
     },
     {
@@ -138,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +184,7 @@
      "output_type": "stream",
      "text": [
       "Getting teachers from DB...\n",
-      "- 0 teachers found\n",
+      "- 1410 teachers found\n",
       "Filtering teachers...\n"
      ]
     },
@@ -154,14 +192,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1926/1926 [00:00<00:00, 28386.20it/s]"
+      "100%|██████████| 1853/1853 [00:00<00:00, 20360.59it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Creating new teachers...\n"
+      "Creating new teachers...\n",
+      "- No new teachers\n"
      ]
     },
     {
@@ -169,13 +208,6 @@
      "output_type": "stream",
      "text": [
       "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "- 1269 teachers created\n"
      ]
     }
    ],
@@ -185,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +225,7 @@
      "output_type": "stream",
      "text": [
       "Getting teachers from DB...\n",
-      "- 1269 teachers found\n",
+      "- 1410 teachers found\n",
       "Adding teachers to courses...\n"
      ]
     },
@@ -201,7 +233,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1926/1926 [00:44<00:00, 43.00it/s]\n"
+      "100%|██████████| 1853/1853 [02:36<00:00, 11.87it/s]\n"
      ]
     }
    ],
@@ -310,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -318,7 +350,7 @@
      "output_type": "stream",
      "text": [
       "Getting units from DB...\n",
-      "- 0 units found\n",
+      "- 390 units found\n",
       "Filtering units...\n"
      ]
     },
@@ -326,7 +358,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 373/373 [00:00<00:00, 181325.38it/s]\n"
+      "100%|██████████| 375/375 [00:00<00:00, 148467.43it/s]"
      ]
     },
     {
@@ -334,7 +366,14 @@
      "output_type": "stream",
      "text": [
       "Creating new units...\n",
-      "- 368 units created\n"
+      "- No units to create\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
@@ -344,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -352,10 +391,10 @@
      "output_type": "stream",
      "text": [
       "Getting studyplans from DB...\n",
-      "- 195 studyplans found\n",
+      "- 370 studyplans found\n",
       "Filtering studyplans...\n",
       "Creating studyplans...\n",
-      "- 172 studyplans created\n"
+      "- 20 studyplans created\n"
      ]
     }
    ],
@@ -365,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -373,9 +412,9 @@
      "output_type": "stream",
      "text": [
       "Getting studyplans from DB...\n",
-      "- 367 studyplans found\n",
+      "- 390 studyplans found\n",
       "Getting planned_in from DB...\n",
-      "- 3366 planned_in found\n",
+      "- 6444 planned_in found\n",
       "Filtering planned_in...\n"
      ]
     },
@@ -383,7 +422,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1926/1926 [00:03<00:00, 557.11it/s]\n"
+      "100%|██████████| 1853/1853 [00:09<00:00, 190.26it/s]\n"
      ]
     },
     {
@@ -391,7 +430,7 @@
      "output_type": "stream",
      "text": [
       "Creating planned_in...\n",
-      "- 3051 planned_in created\n"
+      "- 1054 planned_in created\n"
      ]
     }
    ],
