--- a/update_courses.ipynb
+++ b/update_courses.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -28,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +68,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 5/5 [01:07<00:00, 13.51s/it]\n"
+      "100%|██████████| 5/5 [01:04<00:00, 12.85s/it]\n"
      ]
     },
     {
@@ -92,7 +83,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1858/1858 [16:03<00:00,  1.93it/s]"
+      "100%|██████████| 1858/1858 [17:30<00:00,  1.77it/s]"
      ]
     },
     {
@@ -117,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -243,18 +234,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "E11000 duplicate key error collection: occupancy-epfl-prod.semesters index: semester_unique dup key: { name: \"Semestre de printemps 2023-2024\" }, full error: {'index': 0, 'code': 11000, 'errmsg': 'E11000 duplicate key error collection: occupancy-epfl-prod.semesters index: semester_unique dup key: { name: \"Semestre de printemps 2023-2024\" }', 'keyPattern': {'name': 1}, 'keyValue': {'name': 'Semestre de printemps 2023-2024'}}\n",
-      "E11000 duplicate key error collection: occupancy-epfl-prod.semesters index: semester_unique dup key: { name: \"2023-2024\" }, full error: {'index': 0, 'code': 11000, 'errmsg': 'E11000 duplicate key error collection: occupancy-epfl-prod.semesters index: semester_unique dup key: { name: \"2023-2024\" }', 'keyPattern': {'name': 1}, 'keyValue': {'name': '2023-2024'}}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# # Spring 2023-2024\n",
     "# skip_dates = [\n",
@@ -312,37 +294,37 @@
     "    datetime(2025, 5, 29),\n",
     "]\n",
     "\n",
-    "utils.create_new_semester(db,\n",
-    "    name=\"Semestre d'automne 2024-2025\",\n",
-    "    start_date=datetime(2024, 9, 16),\n",
-    "    end_date=datetime(2024, 12, 22),\n",
-    "    skip_dates=skip_dates,\n",
-    "    type=\"fall\",\n",
-    "    available=True\n",
-    ")\n",
-    "\n",
     "# utils.create_new_semester(db,\n",
-    "#     name=\"Semestre de printemps 2024-2025\",\n",
-    "#     start_date=datetime(2025, 2, 17),\n",
-    "#     end_date=datetime(2025, 6, 1),\n",
+    "#     name=\"Semestre d'automne 2024-2025\",\n",
+    "#     start_date=datetime(2024, 9, 16),\n",
+    "#     end_date=datetime(2024, 12, 22),\n",
     "#     skip_dates=skip_dates,\n",
-    "#     type=\"spring\",\n",
+    "#     type=\"fall\",\n",
     "#     available=True\n",
     "# )\n",
     "\n",
     "utils.create_new_semester(db,\n",
-    "    name=\"2024-2025\",\n",
-    "    start_date=datetime(2024, 9, 9),\n",
+    "    name=\"Semestre de printemps 2024-2025\",\n",
+    "    start_date=datetime(2025, 2, 17),\n",
     "    end_date=datetime(2025, 6, 1),\n",
     "    skip_dates=skip_dates,\n",
-    "    type=\"year\",\n",
+    "    type=\"spring\",\n",
     "    available=True\n",
-    ")"
+    ")\n",
+    "\n",
+    "# utils.create_new_semester(db,\n",
+    "#     name=\"2024-2025\",\n",
+    "#     start_date=datetime(2024, 9, 9),\n",
+    "#     end_date=datetime(2025, 6, 1),\n",
+    "#     skip_dates=skip_dates,\n",
+    "#     type=\"year\",\n",
+    "#     available=True\n",
+    "# )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -391,10 +373,10 @@
      "output_type": "stream",
      "text": [
       "Getting studyplans from DB...\n",
-      "- 370 studyplans found\n",
+      "- 390 studyplans found\n",
       "Filtering studyplans...\n",
       "Creating studyplans...\n",
-      "- 20 studyplans created\n"
+      "- 347 studyplans created\n"
      ]
     }
    ],
@@ -404,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -412,9 +394,9 @@
      "output_type": "stream",
      "text": [
       "Getting studyplans from DB...\n",
-      "- 390 studyplans found\n",
+      "- 370 studyplans found\n",
       "Getting planned_in from DB...\n",
-      "- 6444 planned_in found\n",
+      "- 681 planned_in found\n",
       "Filtering planned_in...\n"
      ]
     },
@@ -422,7 +404,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1853/1853 [00:09<00:00, 190.26it/s]\n"
+      "100%|██████████| 1853/1853 [00:01<00:00, 1027.29it/s]\n"
      ]
     },
     {
@@ -430,7 +412,7 @@
      "output_type": "stream",
      "text": [
       "Creating planned_in...\n",
-      "- 1054 planned_in created\n"
+      "- 5819 planned_in created\n"
      ]
     }
    ],
