fixed room level none

--- a/update_courses.ipynb
+++ b/update_courses.ipynb
@@ -386,33 +386,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Getting studyplans from DB...\n",
-      "- 370 studyplans found\n",
-      "Getting planned_in from DB...\n",
-      "- 681 planned_in found\n",
-      "Filtering planned_in...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 1853/1853 [00:01<00:00, 1027.29it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Creating planned_in...\n",
-      "- 5819 planned_in created\n"
+     "ename": "NameError",
+     "evalue": "name 'utils' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mutils\u001b[49m\u001b[38;5;241m.\u001b[39mcreate_planned_in(db, unique_courses)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'utils' is not defined"
      ]
     }
    ],
