fix null semester

--- a/update_courses.ipynb
+++ b/update_courses.ipynb
@@ -68,14 +68,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 5/5 [01:04<00:00, 12.85s/it]\n"
+      "100%|██████████| 5/5 [00:44<00:00,  8.85s/it]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "- 1858 courses urls found\n",
+      "- 1928 courses urls found\n",
       "Parsing courses...\n"
      ]
     },
@@ -83,14 +83,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1858/1858 [17:30<00:00,  1.77it/s]"
+      "100%|██████████| 1928/1928 [01:26<00:00, 22.36it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "- 1858 courses parsed\n"
+      "- 1928 courses parsed\n"
      ]
     },
     {
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +332,7 @@
      "output_type": "stream",
      "text": [
       "Getting units from DB...\n",
-      "- 390 units found\n",
+      "- 392 units found\n",
       "Filtering units...\n"
      ]
     },
@@ -340,7 +340,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 375/375 [00:00<00:00, 148467.43it/s]"
+      "100%|██████████| 379/379 [00:00<00:00, 106160.09it/s]"
      ]
     },
     {
@@ -348,7 +348,7 @@
      "output_type": "stream",
      "text": [
       "Creating new units...\n",
-      "- No units to create\n"
+      "- 2 units created\n"
      ]
     },
     {
@@ -373,10 +373,10 @@
      "output_type": "stream",
      "text": [
       "Getting studyplans from DB...\n",
-      "- 390 studyplans found\n",
+      "- 737 studyplans found\n",
       "Filtering studyplans...\n",
       "Creating studyplans...\n",
-      "- 347 studyplans created\n"
+      "- 1 studyplans created\n"
      ]
     }
    ],
@@ -386,18 +386,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'utils' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mutils\u001b[49m\u001b[38;5;241m.\u001b[39mcreate_planned_in(db, unique_courses)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'utils' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Getting studyplans from DB...\n",
+      "- 175 studyplans found\n",
+      "Getting planned_in from DB...\n",
+      "- 2861 planned_in found\n",
+      "Filtering planned_in...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1923/1923 [00:00<00:00, 4415.52it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Creating planned_in...\n",
+      "- No new planned_in to create\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
